--- a/index.html
+++ b/index.html
@@ -7,15 +7,12 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
     <link href='https://fonts.googleapis.com/css?family=Dancing+Script' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="style.css" media="screen" title="no title" charset="utf-8">
-    <script type="text/javascript" >
-
-    </script>
-
   </head>
   <body>
     <section>
       <h1>Shifumi</h1>
       <p>Cliquez sur l'un des objets</p>
+      <span id="score"></span>
       <div class="ordinateur">
         <i class="fa fa-hand-rock-o" aria-hidden="true"></i>
         <i class="fa fa-hand-paper-o" aria-hidden="true"></i>
@@ -26,7 +23,8 @@
         <i class="fa fa-hand-paper-o" aria-hidden="true"></i>
         <i class="fa fa-hand-scissors-o" aria-hidden="true"></i>
       </div>
-
     </section>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+  <script type="text/javascript" src="script.js"></script>
   </body>
 </html>
