--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
       <p>Cliquez sur l'un des objets</p>
       <span id="score"></span>
       <div class="ordinateur">
-        <i class="fa fa-hand-rock-o" aria-hidden="true"></i>
-        <i class="fa fa-hand-paper-o" aria-hidden="true"></i>
-        <i class="fa fa-hand-scissors-o" aria-hidden="true"></i>
+        <i class="fa fa-hand-rock-o"></i>
+        <i class="fa fa-hand-paper-o"></i>
+        <i class="fa fa-hand-scissors-o"></i>
       </div>
       <div class="joueur">
-        <i class="fa fa-hand-rock-o" aria-hidden="true"></i>
-        <i class="fa fa-hand-paper-o" aria-hidden="true"></i>
-        <i class="fa fa-hand-scissors-o" aria-hidden="true"></i>
+        <i class="fa fa-hand-rock-o"></i>
+        <i class="fa fa-hand-paper-o"></i>
+        <i class="fa fa-hand-scissors-o"></i>
       </div>
     </section>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
